samples/_failures_safe/1761328088_770536_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17b27d60.c: In function ‘main’:
./samples/SAFE/__tmp_17b27d60.c:134:9: error: expected declaration or statement at end of input
  134 |         printf("Failed to add compression block 1\n");
      |         ^~~~~~
./samples/SAFE/__tmp_17b27d60.c:134:9: error: expected declaration or statement at end of input
